<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:keepScreenOn="true"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/back_button"
        android:padding="@dimen/image_padding"
        android:src="@mipmap/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/toggle_button"
        android:padding="@dimen/image_padding"
        android:src="@mipmap/ic_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@id/capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="false"
        android:background="@null"
        android:contentDescription="@string/capture"
        android:elevation="1dp"
        android:padding="@dimen/image_padding"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/image_padding"
        android:textColor="@android:color/white"
        android:textSize="@dimen/tix_view_textsize"
        app:layout_constraintEnd_toStartOf="@+id/toggle"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/image_padding"
        android:textColor="@android:color/white"
        android:textSize="@dimen/tix_view_textsize"
        app:layout_constraintEnd_toStartOf="@+id/toggle"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/cameraVisionContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <TextView
        android:id="@+id/textViewReflection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_quality_dialog"
        android:gravity="center"
        android:paddingStart="6dp"
        android:paddingLeft="6dp"
        android:paddingTop="2dp"
        android:paddingEnd="6dp"
        android:paddingRight="6dp"
        android:paddingBottom="2dp"
        android:text="@string/tix_reflection"
        android:textColor="@android:color/white"
        android:textSize="@dimen/tix_quality_indicator_text"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/textViewBrightness"
        app:layout_constraintStart_toEndOf="@+id/textViewSharpness"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/textViewBrightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_quality_dialog"
        android:gravity="center"
        android:visibility="invisible"
        android:paddingStart="6dp"
        android:paddingLeft="6dp"
        android:paddingTop="2dp"
        android:paddingEnd="6dp"
        android:paddingRight="6dp"
        android:paddingBottom="2dp"
        android:text="@string/tix_brightness"
        android:textColor="@android:color/white"
        android:textSize="@dimen/tix_quality_indicator_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/textViewSharpness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_quality_dialog"
        android:gravity="center"
        android:paddingStart="6dp"
        android:paddingLeft="6dp"
        android:paddingTop="2dp"
        android:paddingEnd="6dp"
        android:paddingRight="6dp"
        android:paddingBottom="2dp"
        android:text="@string/tix_sharpness"
        android:textColor="@android:color/white"
        android:textSize="@dimen/tix_quality_indicator_text"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="140dp" />

</android.support.constraint.ConstraintLayout>