<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/customControls"
    android:layout_width="match_parent"
    android:keepScreenOn="true"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/image_padding"
        android:textColor="@android:color/white"
        android:textSize="@dimen/tix_label_textsize"
        app:layout_constraintEnd_toStartOf="@+id/toggle"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/back_button"
        android:padding="@dimen/image_padding"
        android:src="@mipmap/ic_back"
        android:tint="@color/tix_fail_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/toggle_button"
        android:padding="@dimen/image_padding"
        android:src="@mipmap/ic_switch"
        android:tint="@color/tix_fail_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <FrameLayout
        android:id="@+id/cameraVisionContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"></FrameLayout>
    <ImageButton
        android:id="@+id/capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="false"
        android:background="@null"
        android:contentDescription="@string/capture"
        android:elevation="15dp"
        android:padding="@dimen/image_padding"

        android:src="@mipmap/ic_capture"
        android:tint="@color/tix_fail_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</android.support.constraint.ConstraintLayout>